[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "claude_air"
authors = [{name = "John Kitchin", email = "jkitchin@andrew.cmu.edu"}]
dependencies = [
"Adafruit-Blinka",
"adafruit-circuitpython-bme680",
"adafruit-circuitpython-sgp30",
"adafruit-circuitpython-pm25",
"adafruit-circuitpython-as7341",
"adafruit-circuitpython-scd4x" ,
"jsonlines",
"waitress",
"flask",
"matplotlib",
"rich"]
license = {text = "MIT"}
dynamic = ["version"]

[project.scripts]
air_serve = "claude_air.app:run"
air_loop = "claude_air.sensors:loop"
air = "claude_air.cli:cli"